--- a/layouts/partials/inslicense.html
+++ b/layouts/partials/inslicense.html
@@ -22,7 +22,16 @@
         href="http://creativecommons.org/licenses/by-nc-nd/4.0/">licencia de Creative Commons
         Reconocimiento-NoComercial-SinObraDerivada 4.0 Internacional</a>.
     {{ else }}
-    {{ .Params.license }}
+
+        {{/* BY Reconocimiento 4.0 Internacional */}}
+        {{ if eq .Params.license "BY"}}
+        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0"
+                        src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Este obra está bajo una <a rel="license"
+                href="http://creativecommons.org/licenses/by/4.0/">licencia de Creative Commons Reconocimiento 4.0
+                Internacional</a>.
+        {{ else }}
+        {{ .Params.license }}
+        {{ end }}
     {{ end }}
   {{ end }}
 {{ end }}
