--- a/themes/docdock/layouts/partials/flex/body-aftercontent.html
+++ b/themes/docdock/layouts/partials/flex/body-aftercontent.html
@@ -44,9 +44,10 @@
 {{else}}
   {{ if .Site.GetPage "page" "_footer.md" }}
     {{(.Site.GetPage "page" "_footer.md").Content}}
-  {{else}}
-    {{ T "create-footer-md" }}
+   {{else}}
+{{/*    {{ T "create-footer-md" }} */}}
   {{end}}
+
 {{end}}
 
 
