-webkit-overflow-scrolling: touch; for ios

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -196,6 +196,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-overflow-scrolling: touch;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
