--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,9 @@
+<head>
+  {{ range .AlternativeOutputFormats -}}
+    {{ printf ` <link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+  {{ end -}}
+</head>
+
 {{ $header := print "_header." .Lang }}
 	{{ range where .Site.Pages "File.BaseFileName" $header }}
 	{{ .Content }} 
