--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -114,7 +114,7 @@ article > aside {
     list-style-type: none; }
     article > aside .menu > label {
       display: block;
-      font-family: 'Verdana', 'Novacento Sans Wide', 'Helvetica', 'Tahoma', 'Geneva', 'Arial', sans-serif;
+      font-family: 'Arial','Verdana', 'Novacento Sans Wide', 'Helvetica', 'Tahoma', 'Geneva', 'Arial', sans-serif;
       font-weight: 100;
       font-size: 130%;
       margin-left: 1rem; }
@@ -201,8 +201,8 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
   line-height: 1.5rem;
-  font-size: 18px;
-  width: 78%; }
+  font-size: 16px;
+  width: 80%; }
 
 :disabled {
   pointer-events: none; }
@@ -311,7 +311,7 @@ article section.page {
   padding: 2rem 4rem; }
   article section.page h1:first-of-type {
     margin: 3rem 0rem;
-    font-family: "Verdana", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-family: "Arial","Verdana", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
     text-align: center;
     text-transform: capitalize;
     color: #060606;
