a.chah 02 y visualización movil

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -679,7 +679,8 @@ ul.children.children-card {
 
 @media (max-width: 1024px) {
   section {
-    margin-right: 0; }
+    margin-right: 0;
+    width: 100; }
 
   section > .toc {
     display: none; } }
@@ -698,14 +699,16 @@ ul.children.children-card {
 
   article > section.page {
     margin: 0 0;
-    padding: 1rem; }
+    padding: 1rem;    
+    width: 100; }
 
   article > section.page #navigation label {
     display: none; }
 
   section {
     margin: 0;
-    padding: 1rem 2rem; }
+    padding: 1rem 2rem; 
+    width: 100; }
 
   header {
     padding: 0 1rem; }
