--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -202,7 +202,7 @@ body {
   flex-direction: column;
   line-height: 1.5rem;
   font-size: 16px;
-  width: 80%; }
+  }
 
 :disabled {
   pointer-events: none; }
@@ -299,7 +299,9 @@ article {
   -webkit-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  margin-top: 3.5rem; }
+  margin-top: 3.5rem; 
+  margin-left: 3%;
+  width: 80%; }
 
 article section.page {
   -webkit-box-flex: 1;
@@ -690,6 +692,8 @@ ul.children.children-card {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column; 
+    margin-left: 0;
+    margin-right: 0;
     width: 100%; }
 
   article > aside {
@@ -709,7 +713,7 @@ ul.children.children-card {
   section {
     margin: 0;
     padding: 1rem 2rem; 
-    width: 100; }
+    width: 100%; }
 
   header {
     padding: 0 1rem; }
